# detekcja_czlowieka_praca_inz

./: README.md
inz_detekcja_czlowieka/: CMakeLists.txt  package.xml
inz_detekcja_czlowieka/backup/: colision_detection_octree.cpp
inz_detekcja_czlowieka/launch/: detekcja_czlowieka.launch
inz_detekcja_czlowieka/rviz/: rviz_config.rviz
inz_detekcja_czlowieka/src/: links_colision_detection.cpp  people_detection.cpp  workspace_colision_detection.cpp
inz_detekcja_czlowieka/urdf/: CMakeLists.txt
inz_detekcja_czlowieka/urdf/launch/: display.launch  gazebo.launch
inz_detekcja_czlowieka/urdf/urdf/: es5_description.urdf
inz_kinect_kalibracja/: CMakeLists.txt  package.xml
inz_kinect_kalibracja/backup/: get_cloud_transfrom.cpp
inz_kinect_kalibracja/config/: artag.yaml
inz_kinect_kalibracja/launch/: kalibracja_all.launch  kalibracja_calculate.launch  kalibracja_only_setup.launch
inz_kinect_kalibracja/rviz/: rviz_config.rviz
inz_kinect_kalibracja/src/: get_TCP_tf.cpp
