<?xml version="1.0"?>
<package format="2">
  <name>inz_kinect_kalibracja</name>
  <version>0.0.0</version>
  <description>The calibration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="odozak@todo.todo">odozak</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <export>

  </export>
</package>
